<resources>
    <string name="app_name">Leave_Application_nmims</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="setting">Settings</string>
    <string name="help">Help</string>
    <string name="dashboard">Dashboard</string>
    <string name="navigation_drawer_open">OPEN DRAWER</string>
    <string name="navigation_drawer_close">CLOSE DRAWER</string>
    <string name="leave_form">Leave Form</string>
    <string name="holiday_list">Holiday List</string>
    <string name="history">History</string>
    <string name="my_report">My Report</string>
    <string name="profile">Profile</string>
    <string name="About">About</string>
    <string name="thala7_gmail_com">thala7@gmail.com</string>
    <string name="mahendra_singh_dhoni">Mahendra Singh Dhoni</string>
    <string name="about_app">The Leave Application app for SVKM Shirpur Campus streamlines the process of requesting and managing leaves for students and faculty made by JASH and MANAV. With a user-friendly interface, it allows users to submit leave requests conveniently, specifying the duration and reason. Administrators can efficiently review and approve requests, ensuring smooth workflow management. The app provides real-time updates on leave statuses, enhancing transparency and communication within the campus community. By digitizing the leave application process, it reduces paperwork, saves time, and improves overall efficiency, contributing to a more organized and effective administrative system at SVKM Shirpur Campus.</string>
    <string name="Help1">How can we Help you?</string>
    <string name="Help2">Tell us about the problem that you are having</string>
    <string name="version">Version 1.0</string>
    <string name="logo_description">App Logo</string>
    <string name="made">Made by Manav and Jash</string>
    <string name="user">User Name</string>
    <string name="pass">Password</string>
    <string name="log">Log In</string>
    <string name="sign">Sign Up</string>
    <string name="forget">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="sapid">SAP ID</string>
    <string name="newpass">New Password</string>
    <string name="repass">Retype the Password</string>
    <string name="submit">Submit</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="forward">Forward to HOD</string>
    <string name="register">Register</string>
    <string-array name="names_array">
        <item>Select Mentor</item>
        <item>Dr.Ritesh Dhanare</item>
        <item>Prof. Praveen Landge</item>
        <item>Prof. Piyushkumar Soni</item>
        <item>Prof. Pratiksha Meshram</item>
        <item>Prof. Sonia Relan</item>
        <item>Prof. Dhiraj Bhise</item>
        <item>Dr. Prashant Udawant</item>
    </string-array>
</resources>